force-app/main/default/objects/RMS_Size_Mapping__c/RMS_Size_Mapping__c.object-meta.xml
<CustomObject>
    <label>RMS Size Mapping</label>
    <nameField>
        <displayFormat>Size-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMS Size Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>