force-app/main/default/objects/RMS_Size_Mapping__c/fields/Asia__c.field-meta.xml
<CustomField>
    <fullName>Asia__c</fullName>
    <label>Asia</label>
    <length>10</length>
    <type>Text</type>
</CustomField>