force-app/main/default/objects/RMS_Size_Mapping__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <length>2</length>
    <type>Text</type>
</CustomField>