force-app/main/default/objects/RMS_Size_Mapping__c/fields/US__c.field-meta.xml
<CustomField>
    <fullName>US__c</fullName>
    <label>US</label>
    <length>10</length>
    <type>Text</type>
</CustomField>